--- a/app/src/main/res/layout/edit_speaker_model.xml
+++ b/app/src/main/res/layout/edit_speaker_model.xml
@@ -35,6 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="Bob"
+        android:maxLength="15"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="60dp"
         android:layout_marginStart="5dp"
