--- a/app/src/main/res/layout/edit_speaker_model.xml
+++ b/app/src/main/res/layout/edit_speaker_model.xml
@@ -1,66 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rl"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/add_speaker_name_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/choose_a_speaker_name"
-        android:textColor="@color/black"
-        android:gravity="center"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="5dp"
-        style="@style/blackBorder"
-        />
-
-    <TextView
-        android:id="@+id/add_speaker_name_textView"
+        android:id="@+id/speaker_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/add_speaker_name_editText"
+        android:layout_alignBottom="@+id/add_speaker_name_editText"
+        android:layout_alignEnd="@+id/recordBtn"
+        android:layout_alignRight="@+id/recordBtn"
+        android:layout_marginEnd="54dp"
+        android:layout_marginRight="54dp"
         android:text="@string/speaker_name"
         android:textColor="@color/black"
-        android:layout_marginTop="72dp"
-        android:layout_marginLeft="120dp"
-        android:textSize="15sp"
-        android:layout_marginStart="120dp" />
+        android:textSize="15sp" />
 
     <EditText
         android:id="@+id/add_speaker_name_editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/recordBtn"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/recordBtn"
         android:hint="Bob"
         android:maxLength="15"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginStart="5dp"
-        android:layout_toRightOf="@+id/add_speaker_name_textView"
-        android:layout_toEndOf="@+id/add_speaker_name_textView"
         android:textColor="@color/black" />
-
-    <TextView
-        android:id="@+id/add_speaker_record_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/update_speaker_model"
-        android:layout_marginTop="150dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        style="@style/blackBorder"
-        android:textColor="@color/black"
-        android:gravity="center"/>
 
     <com.emrekose.recordbutton.RecordButton
         android:id="@+id/recordBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/add_speaker_name_editText"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_marginTop="19dp"
         app:buttonGap="10dp"
         app:buttonRadius="40dp"
         app:maxMilisecond="10000"
@@ -72,9 +48,9 @@
         android:id="@+id/update_speaker_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/recordBtn"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="120dp"
+        android:layout_marginTop="18dp"
         android:text="@string/update_speaker_button" />
 
 </RelativeLayout>
