--- a/app/src/main/res/layout/speakers_list.xml
+++ b/app/src/main/res/layout/speakers_list.xml
@@ -1,70 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.internal.ScrimInsetsFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cl"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/rl"
+    <LinearLayout
+        android:id="@+id/firstLayout"
         android:layout_width="match_parent"
-        android:layout_height="370dp"
-        android:background="@drawable/border"
+        android:layout_height="match_parent"
         android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/no_speakers"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="15dp"
-            android:textColor="@color/black"
-            android:text="@string/no_speakers"/>
 
         <ListView
             android:id="@+id/speakerListView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </RelativeLayout>
+            android:background="@drawable/border"
+            android:layout_height="0dp"
+            android:layout_weight="0.525"/>
 
-    <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/rl2"
-        android:layout_marginTop="370dp"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="0.5"/>
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/no_speakers"
         android:layout_width="match_parent"
-        android:layout_height="230dp"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:paddingTop="10dp"
+        android:text="@string/no_speakers"
+        android:textColor="@color/black"/>
+
+    <View
+        android:id="@+id/centerView"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <LinearLayout
+        android:id="@+id/secondLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/centerView"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:orientation="vertical">
 
         <Button
             android:id="@+id/add_button"
-            android:layout_marginTop="40dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
+            android:onClick="addSpeaker"
             android:text="@string/new_speaker"
             android:textAllCaps="false"
-            android:textSize="20sp"
-            android:onClick="addSpeaker"/>
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/identify_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/add_button"
-            android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
+            android:onClick="identify"
             android:text="@string/identify"
             android:textAllCaps="false"
-            android:textSize="20sp"
-            android:onClick="identify"/>
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/removeall_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/identify_button"
-            android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
+            android:onClick="removeAll"
             android:text="@string/remove_all"
             android:textAllCaps="false"
-            android:textSize="20sp"
-            android:onClick="removeAll"/>
-    </RelativeLayout>
-</android.support.design.internal.ScrimInsetsFrameLayout>
+            android:textSize="20sp" />
+    </LinearLayout>
+
+</android.support.constraint.ConstraintLayout>
