--- a/app/src/main/res/layout/edit_speaker_model.xml
+++ b/app/src/main/res/layout/edit_speaker_model.xml
@@ -5,52 +5,53 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/speaker_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/add_speaker_name_editText"
-        android:layout_alignBottom="@+id/add_speaker_name_editText"
-        android:layout_alignEnd="@+id/recordBtn"
-        android:layout_alignRight="@+id/recordBtn"
-        android:layout_marginEnd="54dp"
-        android:layout_marginRight="54dp"
-        android:text="@string/speaker_name"
-        android:textColor="@color/black"
-        android:textSize="15sp" />
-
     <EditText
         android:id="@+id/add_speaker_name_editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/recordBtn"
         android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/recordBtn"
-        android:hint="Bob"
+        android:layout_centerHorizontal="true"
+        android:textAlignment="center"
+        android:hint="Speaker name"
         android:maxLength="15"
         android:textColor="@color/black" />
 
-    <com.emrekose.recordbutton.RecordButton
-        android:id="@+id/recordBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <Button
+        android:id="@+id/startBtn"
+        android:layout_width="125dp"
+        android:layout_height="125dp"
         android:layout_below="@+id/add_speaker_name_editText"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="19dp"
-        app:buttonGap="10dp"
-        app:buttonRadius="40dp"
-        app:maxMilisecond="10000"
-        app:progressColor="@color/colorPrimary"
-        app:progressStroke="15"
-        app:recordIcon="@drawable/ic_keyboard_voice_white_36dp" />
+        android:layout_marginTop="10dp"
+        android:background="@drawable/ic_record_button"/>
+
+    <Button
+        android:id="@+id/stopBtn"
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:layout_below="@+id/add_speaker_name_editText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/ic_pause_button"
+        android:visibility="invisible"/>
+
+    <TextView
+        android:id="@+id/timeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/stopBtn"
+        android:textSize="42sp"
+        android:layout_marginTop="10dp"
+        android:text="@string/default_time"/>
 
     <Button
         android:id="@+id/update_speaker_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/recordBtn"
+        android:layout_below="@+id/timeText"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="10dp"
         android:text="@string/update_speaker_button" />
 
 </RelativeLayout>
