--- a/app/src/main/res/layout/verification.xml
+++ b/app/src/main/res/layout/verification.xml
@@ -7,24 +7,38 @@
     android:background="@drawable/border"
     android:orientation="vertical">
 
-    <com.emrekose.recordbutton.RecordButton
-        android:id="@+id/recordBtn"
+    <Button
+        android:id="@+id/startBtn"
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/ic_record_button"/>
+
+    <Button
+        android:id="@+id/stopBtn"
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/ic_pause_button"
+        android:visibility="invisible"/>
+
+    <TextView
+        android:id="@+id/timeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="13dp"
-        app:buttonGap="10dp"
-        app:buttonRadius="40dp"
-        app:maxMilisecond="10000"
-        app:progressColor="@color/colorPrimary"
-        app:progressStroke="15"
-        app:recordIcon="@drawable/ic_keyboard_voice_white_36dp" />
+        android:layout_below="@+id/stopBtn"
+        android:textSize="42sp"
+        android:layout_marginTop="10dp"
+        android:text="@string/default_time"/>
 
     <TextView
         android:id="@+id/result_text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/timeText"
         android:gravity="center"
         android:textSize="60sp"/>
 
